# KirchhoffSolver

./: README.md  pyproject.toml
docs/: conf.py  index.rst
examples/: quickstart.py
kirchhoffsolver/: __init__.py  solver.py
tests/: test_solver.py
