[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kirchhoffsolver"
version = "0.1.0"
description = "Adaptive conductance network solver"
authors = [{ name = "Ryan McKenna", email = "75239678+RDM3DC@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "https://github.com/RDM3DC/kirchhoffsolver"
